--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -1,174 +1,167 @@
-items:
 - name: Dokumentation för Notification Hubs
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Notification Hubs
-    href: notification-hubs-push-notification-overview.md
+    - name: Om Notification Hubs
+      href: notification-hubs-push-notification-overview.md
 - name: Snabbstarter
   items:
-  - name: Skapa en meddelandehubb – Azure-portalen
-    href: create-notification-hub-portal.md
-  - name: Konfigurera en meddelandehubb – Azure-portalen
-    href: configure-notification-hub-portal-pns-settings.md
+    - name: Skapa en meddelandehubb – Azure-portalen
+      href: create-notification-hub-portal.md
+    - name: Konfigurera en meddelandehubb – Azure-portalen
+      href: configure-notification-hub-portal-pns-settings.md
 - name: Självstudier
   items:
-  - name: Android
-    items:
-    - name: Skicka push-meddelanden med hjälp av Firebase Cloud Messaging
-      href: notification-hubs-android-push-notification-google-fcm-get-started.md
-    - name: Skicka push-meddelanden med hjälp av Google Cloud Messaging
-      href: notification-hubs-android-push-notification-google-gcm-get-started.md
-    - name: Skicka push-meddelanden till specifika enheter
-      href: notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification.md
-    - name: Skicka push-meddelanden till specifika användare
-      href: notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification.md
-    - name: Skicka push-meddelanden till Xamarin Android-appar
-      href: xamarin-notification-hubs-push-notifications-android-gcm.md
-  - name: Baidu
-    items:
-    - name: Skicka push-meddelanden med hjälp av Baidu Cloud Push
-      href: notification-hubs-baidu-china-android-notifications-get-started.md
-  - name: Chrome
-    items:
-    - name: Skicka push-meddelanden till Chrome-appar
-      href: notification-hubs-chrome-push-notifications-get-started.md
-  - name: iOS
-    items:
-    - name: Skicka push-meddelanden till iOS-appar
-      href: notification-hubs-ios-apple-push-notification-apns-get-started.md
-    - name: Skicka push-meddelanden till specifika enheter
-      href: notification-hubs-ios-xplat-segmented-apns-push-notification.md
-    - name: Skicka push-meddelanden till specifika användare
-      href: notification-hubs-aspnet-backend-ios-apple-apns-notification.md
-    - name: Skicka push-meddelanden till Xamarin iOS-appar
-      href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
-    - name: Skicka push-meddelanden till iOS-enheter
-      href: notification-hubs-ios-xplat-localized-apns-push-notification.md
-  - name: Kindle
-    items:
-    - name: Skicka push-meddelanden med hjälp av Amazon Device Messaging
-      href: notification-hubs-kindle-amazon-adm-push-notification.md
-  - name: Windows Phone
-    items:
-    - name: Skicka push-meddelanden till appar
-      href: notification-hubs-windows-mobile-push-notifications-mpns.md
-    - name: Skicka push-meddelanden till specifika enheter
-      href: notification-hubs-windows-phone-push-xplat-segmented-mpns-notification.md
-  - name: Windows
-    items:
-    - name: Skicka push-meddelanden till appar för Universell Windows-plattform
-      href: notification-hubs-windows-store-dotnet-get-started-wns-push-notification.md
-    - name: Skicka push-meddelanden till specifika enheter
-      href: notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns.md
-    - name: Skicka lokaliserade meddelanden till appar
-      href: notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification.md
-    - name: Skicka push-meddelanden till specifika användare
-      href: notification-hubs-aspnet-backend-windows-dotnet-wns-notification.md
-    - name: Skicka platsbaserade push-meddelanden
-      href: notification-hubs-push-bing-spatial-data-geofencing-notification.md
+    - name: Android
+      items:
+        - name: Skicka push-meddelanden med hjälp av Firebase Cloud Messaging
+          href: notification-hubs-android-push-notification-google-fcm-get-started.md
+        - name: Skicka push-meddelanden med hjälp av Google Cloud Messaging
+          href: notification-hubs-android-push-notification-google-gcm-get-started.md
+        - name: Skicka push-meddelanden till specifika enheter
+          href: notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification.md
+        - name: Skicka push-meddelanden till specifika användare
+          href: notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification.md
+        - name: Skicka push-meddelanden till Xamarin Android-appar
+          href: xamarin-notification-hubs-push-notifications-android-gcm.md
+    - name: Baidu
+      items:
+        - name: Skicka push-meddelanden med hjälp av Baidu Cloud Push
+          href: notification-hubs-baidu-china-android-notifications-get-started.md
+    - name: Chrome
+      items:
+        - name: Skicka push-meddelanden till Chrome-appar
+          href: notification-hubs-chrome-push-notifications-get-started.md
+    - name: iOS
+      items:
+        - name: Skicka push-meddelanden till iOS-appar
+          href: notification-hubs-ios-apple-push-notification-apns-get-started.md
+        - name: Skicka push-meddelanden till specifika enheter
+          href: notification-hubs-ios-xplat-segmented-apns-push-notification.md
+        - name: Skicka push-meddelanden till specifika användare
+          href: notification-hubs-aspnet-backend-ios-apple-apns-notification.md
+        - name: Skicka push-meddelanden till Xamarin iOS-appar
+          href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
+        - name: Skicka push-meddelanden till iOS-enheter
+          href: notification-hubs-ios-xplat-localized-apns-push-notification.md
+    - name: Kindle
+      items:
+        - name: Skicka push-meddelanden med hjälp av Amazon Device Messaging
+          href: notification-hubs-kindle-amazon-adm-push-notification.md
+    - name: Windows Phone
+      items:
+        - name: Skicka push-meddelanden till appar
+          href: notification-hubs-windows-mobile-push-notifications-mpns.md
+        - name: Skicka push-meddelanden till specifika enheter
+          href: notification-hubs-windows-phone-push-xplat-segmented-mpns-notification.md
+    - name: Windows
+      items:
+        - name: Skicka push-meddelanden till appar för Universell Windows-plattform
+          href: notification-hubs-windows-store-dotnet-get-started-wns-push-notification.md
+        - name: Skicka push-meddelanden till specifika enheter
+          href: notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns.md
+        - name: Skicka lokaliserade meddelanden till appar
+          href: notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification.md
+        - name: Skicka push-meddelanden till specifika användare
+          href: notification-hubs-aspnet-backend-windows-dotnet-wns-notification.md
+        - name: Skicka platsbaserade push-meddelanden
+          href: notification-hubs-push-bing-spatial-data-geofencing-notification.md
 - name: Exempel
   items:
-  - name: Kodexempel
-    href: samples.md
-  - name: PowerShell
-    href: samples-powershell.md
+    - name: Kodexempel
+      href: samples.md
+    - name: PowerShell
+      href: samples-powershell.md
 - name: Begrepp
   items:
-  - name: Push-arkitekturvägledning för företag
-    href: notification-hubs-enterprise-push-notification-architecture.md
-  - name: Enhetsregistreringar
-    href: notification-hubs-push-notification-registration-management.md
-    items:
-    - name: Taggar för registreringar
-      href: notification-hubs-tags-segment-push-message.md
-    - name: Mallregistreringar
-      href: notification-hubs-templates-cross-platform-push-messages.md
-  - name: Säkerhetsmodell
-    href: notification-hubs-push-notification-security.md
+    - name: Push-arkitekturvägledning för företag
+      href: notification-hubs-enterprise-push-notification-architecture.md
+    - name: Enhetsregistreringar
+      href: notification-hubs-push-notification-registration-management.md
+      items:
+        - name: Taggar för registreringar
+          href: notification-hubs-tags-segment-push-message.md
+        - name: Mallregistreringar
+          href: notification-hubs-templates-cross-platform-push-messages.md
+    - name: Säkerhetsmodell
+      href: notification-hubs-push-notification-security.md
 - name: Instruktionsguider
   items:
-  - name: Ändra prisnivå
-    href: change-pricing-tier.md
-  - name: Skicka meddelanden mellan olika plattformar
-    href: notification-hubs-aspnet-cross-platform-notification.md
-  - name: Skicka formaterat innehåll till enheter
-    href: notification-hubs-aspnet-backend-ios-apple-push-notification-service-apns-rich.md
-  - name: Skicka schemalagda meddelanden
-    href: notification-hubs-send-push-notifications-scheduled.md
-  - name: Distribuera och hantera Notification Hubs med Azure PowerShell
-    href: notification-hubs-deploy-and-manage-powershell.md
-  - name: Skicka säkert push-meddelanden till användare
-    href: notification-hubs-aspnet-backend-windows-dotnet-wns-secure-push-notification.md
-  - name: Exportera och importera många registreringar samtidigt
-    href: export-modify-registrations-bulk.md
-  - name: Skapa meddelandehub med SDK:er
-    items:
-    - name: Skapa meddelandehub – .NET
-      href: /dotnet/api/overview/azure/notification-hubs?view=azure-dotnet
-    - name: Skapa meddelandehub – Node.js
-      href: notification-hubs-nodejs-push-notification-tutorial.md
-    - name: Skapa meddelandehub – Java
-      href: notification-hubs-java-push-notification-tutorial.md
-    - name: Skapa meddelandehub – PHP
-      href: notification-hubs-php-push-notification-tutorial.md
-    - name: Skapa meddelandehub – Python
-      href: notification-hubs-python-push-notification-tutorial.md
-  - name: Konfigurera inställningar för Platform Notification Service
-    items:
-    - name: Konfigurera inställningar för Apple Push Notification Service
-      href: configure-apple-push-notification-service.md
-    - name: Konfigurera inställningar för Google Firebase Cloud Messaging
-      href: configure-google-firebase-cloud-messaging.md
-    - name: Konfigurera Windows Push Notification Service
-      href: configure-windows-push-notification-service.md
-    - name: Konfigurera Microsoft Push Notification Service
-      href: configure-microsoft-push-notification-service.md
-    - name: Konfigurera Android Device Messaging
-      href: configure-android-device-messaging.md
-    - name: Konfigurera Baidu Cloud Push
-      href: configure-baidu-cloud-push.md
-  - name: Registrera med serverdelen för programmet
-    href: notification-hubs-ios-aspnet-register-user-from-backend-to-push-notification.md
-  - name: Använd tokenbaserad autentisering med Apple-enheter
-    href: notification-hubs-push-notification-http2-token-authentification.md
-  - name: Felsökning av utelämnade meddelanden
-    href: notification-hubs-push-notification-fixer.md
+    - name: Ändra prisnivå
+      href: change-pricing-tier.md
+    - name: Skicka meddelanden mellan olika plattformar
+      href: notification-hubs-aspnet-cross-platform-notification.md
+    - name: Skicka formaterat innehåll till enheter
+      href: notification-hubs-aspnet-backend-ios-apple-push-notification-service-apns-rich.md
+    - name: Skicka schemalagda meddelanden
+      href: notification-hubs-send-push-notifications-scheduled.md
+    - name: Distribuera och hantera Notification Hubs med Azure PowerShell
+      href: notification-hubs-deploy-and-manage-powershell.md
+    - name: Skicka säkert push-meddelanden till användare
+      href: notification-hubs-aspnet-backend-windows-dotnet-wns-secure-push-notification.md
+    - name: Exportera och importera många registreringar samtidigt
+      href: export-modify-registrations-bulk.md
+    - name: 'Skapa meddelandehub med SDK:er'
+      items:
+        - name: Skapa meddelandehub – .NET
+          href: /dotnet/api/overview/azure/notification-hubs?view=azure-dotnet
+        - name: Skapa meddelandehub – Node.js
+          href: notification-hubs-nodejs-push-notification-tutorial.md
+        - name: Skapa meddelandehub – Java
+          href: notification-hubs-java-push-notification-tutorial.md
+        - name: Skapa meddelandehub – PHP
+          href: notification-hubs-php-push-notification-tutorial.md
+        - name: Skapa meddelandehub – Python
+          href: notification-hubs-python-push-notification-tutorial.md
+    - name: Konfigurera inställningar för Platform Notification Service
+      items:
+        - name: Konfigurera inställningar för Apple Push Notification Service
+          href: configure-apple-push-notification-service.md
+        - name: Konfigurera inställningar för Google Firebase Cloud Messaging
+          href: configure-google-firebase-cloud-messaging.md
+        - name: Konfigurera Windows Push Notification Service
+          href: configure-windows-push-notification-service.md
+        - name: Konfigurera Microsoft Push Notification Service
+          href: configure-microsoft-push-notification-service.md
+        - name: Konfigurera Android Device Messaging
+          href: configure-android-device-messaging.md
+        - name: Konfigurera Baidu Cloud Push
+          href: configure-baidu-cloud-push.md
+    - name: Registrera med serverdelen för programmet
+      href: notification-hubs-ios-aspnet-register-user-from-backend-to-push-notification.md
+    - name: Använd tokenbaserad autentisering med Apple-enheter
+      href: notification-hubs-push-notification-http2-token-authentification.md
+    - name: Felsökning av utelämnade meddelanden
+      href: notification-hubs-push-notification-fixer.md
 - name: Referens
   items:
-  - name: .NET
-    href: /dotnet/api/microsoft.azure.notificationhubs
-  - name: PowerShell
-    href: /powershell/module/az.notificationhubs
-  - name: REST
-    href: /rest/api/notificationhubs/
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.notificationhubs/allversions
+    - name: .NET
+      href: /dotnet/api/microsoft.azure.notificationhubs
+    - name: PowerShell
+      href: /powershell/module/az.notificationhubs
+    - name: REST
+      href: /rest/api/notificationhubs/
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.notificationhubs/allversions
 - name: Resurser
   items:
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: notification-hubs-push-notification-faq.md
-  - name: Migrering från Google GCM till FCM
-    href: notification-hubs-gcm-to-fcm.md
-  - name: SDK:er
-    href: notification-hubs-sdks.md
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/notification-hubs/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=notificationhubs
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-notificationhub
-  - name: Begär en funktion
-    href: https://feedback.azure.com/forums/218849-notification-hubs
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Supportalternativ
-    href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: 1a62b954144db057a19fc39069538f208a1bf035
-ms.sourcegitcommit: 1c2cf60ff7da5e1e01952ed18ea9a85ba333774c
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/12/2019
-ms.locfileid: "59521809"
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: notification-hubs-push-notification-faq.md
+    - name: Migrering från Google GCM till FCM
+      href: notification-hubs-gcm-to-fcm.md
+    - name: 'SDK:er'
+      href: notification-hubs-sdks.md
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/notification-hubs/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=notificationhubs'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-notificationhub'
+    - name: Begär en funktion
+      href: 'https://feedback.azure.com/forums/218849-notification-hubs'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Supportalternativ
+      href: 'https://azure.microsoft.com/support/options/'
