--- a/articles/active-directory/identity-protection/index.yml
+++ b/articles/active-directory/identity-protection/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 4b98648325eaf434d675bfdc1cdd704870912bc3
-ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/27/2019
-ms.locfileid: "58517223"
 documentType: LandingData
 title: Azure AD Identity Protection
 metadata:
-  document_id: 
-  title: Dokumentation för Azure Active Directory Identity Protection – snabbstarter, begrepp, referenser | Microsoft Docs
+  document_id: null
+  title: 'Dokumentation för Azure Active Directory Identity Protection – snabbstarter, begrepp, referenser | Microsoft Docs'
   description: Se hur du konfigurerar och testar Azure Active Directory Identity Protection.
   services: active-directory
   ms.subservice: identity-protection
@@ -22,25 +16,25 @@ metadata:
   ms.date: 09/14/2018
   ms.author: joflore
 abstract:
-  description: Se hur identifieringen av potentiellt komprometterade identiteter fungerar och hur du implementerar automatiska åtgärder för att ta hand om dem. Azure Active Directory Identity Protection är en funktion i Azure AD Premium P2-versionen som gör att du kan:<ul><li>Identifiera potentiella sårbarheter som påverkar organisationens identiteter</li><li>Konfigurera principer för villkorsstyrd åtkomst för att automatiskt svara på misstänkta åtgärder relaterade till organisationens identiteter</li><li>Undersöka misstänkta incidenter och vidta lämpliga åtgärder för att lösa dem</li></ul><br> Följande resurser hjälper dig att komma igång snabbt.
+  description: 'Se hur identifieringen av potentiellt komprometterade identiteter fungerar och hur du implementerar automatiska åtgärder för att ta hand om dem. Azure Active Directory Identity Protection är en funktion i Azure AD Premium P2-versionen som gör att du kan:<ul><li>Identifiera potentiella sårbarheter som påverkar organisationens identiteter</li><li>Konfigurera principer för villkorsstyrd åtkomst för att automatiskt svara på misstänkta åtgärder relaterade till organisationens identiteter</li><li>Undersöka misstänkta incidenter och vidta lämpliga åtgärder för att lösa dem</li></ul><br> Följande resurser hjälper dig att komma igång snabbt.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: ./media/index/video.png
       width: 246
     title: Introduktion till Azure AD Identity Protection
-    href: https://www.youtube.com/watch?v=zI3jn_G0_Ns
+    href: 'https://www.youtube.com/watch?v=zI3jn_G0_Ns'
     width: 246
 sections:
-- title: Snabbstarter på fem minuter
-  items:
-  - type: paragraph
-    text: Se hur du konfigurerar inloggningsriskprinciper för villkorsstyrd åtkomst för vanliga åtkomstscenarier.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på fem minuter
     items:
-    - image:
-        src: ./media/index/i_security-management.png
-      text: Blockera åtkomst när en sessionsrisk identifieras
-      href: quickstart-sign-in-risk-policy.md
+      - type: paragraph
+        text: Se hur du konfigurerar inloggningsriskprinciper för villkorsstyrd åtkomst för vanliga åtkomstscenarier.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: ./media/index/i_security-management.png
+            text: Blockera åtkomst när en sessionsrisk identifieras
+            href: quickstart-sign-in-risk-policy.md
