--- a/articles/active-directory/managed-identities-azure-resources/TOC.yml
+++ b/articles/active-directory/managed-identities-azure-resources/TOC.yml
@@ -1,165 +1,158 @@
-items:
 - name: Hanterade identiteter för Azure-resurser
   href: index.yml
 - name: Översikt
   items:
-  - name: Om hanterade identiteter för Azure-resurser
-    href: overview.md
+    - name: Om hanterade identiteter för Azure-resurser
+      href: overview.md
 - name: Snabbstarter
   items:
-  - name: Komma åt Azure Resource Manager med en hanterad identitet för virtuell dator
-    items:
-    - name: Virtuell Windows-dator
-      href: tutorial-windows-vm-access-arm.md
-    - name: Virtuell Linux-dator
-      href: tutorial-linux-vm-access-arm.md
+    - name: Komma åt Azure Resource Manager med en hanterad identitet för virtuell dator
+      items:
+        - name: Virtuell Windows-dator
+          href: tutorial-windows-vm-access-arm.md
+        - name: Virtuell Linux-dator
+          href: tutorial-linux-vm-access-arm.md
 - name: Självstudier
   items:
-  - name: Windows VM/VMSS
-    items:
-    - name: Få åtkomst till Azure Data Lake Store
-      href: tutorial-windows-vm-access-datalake.md
-    - name: Få åtkomst till Azure Storage
-      href: tutorial-vm-windows-access-storage.md
-    - name: Få åtkomst till Azure Storage med en åtkomstnyckel
-      href: tutorial-windows-vm-access-storage.md
-    - name: Få åtkomst till Azure Storage med SAS
-      href: tutorial-windows-vm-access-storage-sas.md
-    - name: Få åtkomst till Azure SQL
-      href: tutorial-windows-vm-access-sql.md
-    - name: Få åtkomst till Azure Key Vault
-      href: tutorial-windows-vm-access-nonaad.md
-    - name: Få åtkomst till Azure Cosmos DB
-      href: tutorial-windows-vm-access-cosmos-db.md
-    - name: Få åtkomst till Azure AD Graph API
-      href: tutorial-windows-vm-access-azure-ad-graph.md
-    - name: Få åtkomst till Azure Resource Manager med en användartilldelad hanterad identitet
-      href: tutorial-windows-vm-ua-arm.md
-  - name: Linux VM/VMSS
-    items:
-    - name: Få åtkomst till Azure Data Lake Store
-      href: tutorial-linux-vm-access-datalake.md
-    - name: Få åtkomst till Azure Storage
-      href: tutorial-linux-vm-access-storage.md
-    - name: Få åtkomst till Azure Storage med en åtkomstnyckel
-      href: tutorial-linux-vm-access-storage-access-key.md
-    - name: Få åtkomst till Azure Storage med SAS
-      href: tutorial-linux-vm-access-storage-sas.md
-    - name: Få åtkomst till Azure Key Vault
-      href: tutorial-linux-vm-access-nonaad.md
-    - name: Få åtkomst till Azure Cosmos DB
-      href: tutorial-linux-vm-access-cosmos-db.md
-    - name: Få åtkomst till Azure Container Registry
-      href: /azure/container-registry/container-registry-authentication-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
-    - name: Få åtkomst till Azure AD Graph API
-      href: tutorial-linux-vm-access-azure-ad-graph.md
-    - name: Få åtkomst till Azure Resource Manager med en användartilldelad hanterad identitet
-      href: msi-tutorial-linux-vm-access-arm.md
-  - name: Azure Service Bus
-    href: /azure/service-bus-messaging/service-bus-managed-service-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
-  - name: Azure App Service och Functions
-    href: /azure/app-service/overview-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
-  - name: Azure Event Hubs
-    href: /azure/event-hubs/event-hubs-managed-service-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
-  - name: Azure Container Instances
-    href: /azure/container-instances/container-instances-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+    - name: Windows VM/VMSS
+      items:
+        - name: Få åtkomst till Azure Data Lake Store
+          href: tutorial-windows-vm-access-datalake.md
+        - name: Få åtkomst till Azure Storage
+          href: tutorial-vm-windows-access-storage.md
+        - name: Få åtkomst till Azure Storage med en åtkomstnyckel
+          href: tutorial-windows-vm-access-storage.md
+        - name: Få åtkomst till Azure Storage med SAS
+          href: tutorial-windows-vm-access-storage-sas.md
+        - name: Få åtkomst till Azure SQL
+          href: tutorial-windows-vm-access-sql.md
+        - name: Få åtkomst till Azure Key Vault
+          href: tutorial-windows-vm-access-nonaad.md
+        - name: Få åtkomst till Azure Cosmos DB
+          href: tutorial-windows-vm-access-cosmos-db.md
+        - name: Få åtkomst till Azure AD Graph API
+          href: tutorial-windows-vm-access-azure-ad-graph.md
+        - name: Få åtkomst till Azure Resource Manager med en användartilldelad hanterad identitet
+          href: tutorial-windows-vm-ua-arm.md
+    - name: Linux VM/VMSS
+      items:
+        - name: Få åtkomst till Azure Data Lake Store
+          href: tutorial-linux-vm-access-datalake.md
+        - name: Få åtkomst till Azure Storage
+          href: tutorial-linux-vm-access-storage.md
+        - name: Få åtkomst till Azure Storage med en åtkomstnyckel
+          href: tutorial-linux-vm-access-storage-access-key.md
+        - name: Få åtkomst till Azure Storage med SAS
+          href: tutorial-linux-vm-access-storage-sas.md
+        - name: Få åtkomst till Azure Key Vault
+          href: tutorial-linux-vm-access-nonaad.md
+        - name: Få åtkomst till Azure Cosmos DB
+          href: tutorial-linux-vm-access-cosmos-db.md
+        - name: Få åtkomst till Azure Container Registry
+          href: /azure/container-registry/container-registry-authentication-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+        - name: Få åtkomst till Azure AD Graph API
+          href: tutorial-linux-vm-access-azure-ad-graph.md
+        - name: Få åtkomst till Azure Resource Manager med en användartilldelad hanterad identitet
+          href: msi-tutorial-linux-vm-access-arm.md
+    - name: Azure Service Bus
+      href: /azure/service-bus-messaging/service-bus-managed-service-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+    - name: Azure App Service och Functions
+      href: /azure/app-service/overview-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+    - name: Azure Event Hubs
+      href: /azure/event-hubs/event-hubs-managed-service-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+    - name: Azure Container Instances
+      href: /azure/container-instances/container-instances-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
 - name: Instruktionsguider
   items:
-  - name: Konfigurera hanterade identiteter på virtuella datorer
-    items:
-    - name: Portalen
-      href: qs-configure-portal-windows-vm.md
-    - name: CLI
-      href: qs-configure-cli-windows-vm.md
-    - name: PowerShell
-      href: qs-configure-powershell-windows-vm.md
-    - name: Azure Resource Manager-mall
-      href: qs-configure-template-windows-vm.md
-    - name: REST
-      href: qs-configure-rest-vm.md
-    - name: Azure-SDK:er
-      href: qs-configure-sdk-windows-vm.md
-  - name: Konfigurera hanterade identiteter på VM-skalningsuppsättningar
-    items:
-    - name: Portalen
-      href: qs-configure-portal-windows-vmss.md
-    - name: CLI
-      href: qs-configure-cli-windows-vmss.md
-    - name: PowerShell
-      href: qs-configure-powershell-windows-vmss.md
-    - name: Azure Resource Manager-mall
-      href: qs-configure-template-windows-vmss.md
-    - name: REST
-      href: qs-configure-rest-vmss.md
-  - name: Använd hanterade identiteter på virtuella datorer
-    items:
-    - name: Hämta en åtkomsttoken
-      href: how-to-use-vm-token.md
-    - name: Logga in på Powershell och CLI med hanterad identitet
-      href: how-to-use-vm-sign-in.md
-    - name: Använda med Azure-SDK:er
-      href: how-to-use-vm-sdk.md
-    - name: Sluta använda VM-tillägg och börja använda Azure IMDS
-      href: howto-migrate-vm-extension.md
-  - name: Tilldela en hanterad identitet åtkomst till en annan Azure-resurs
-    items:
-    - name: Portalen
-      href: howto-assign-access-portal.md
-    - name: CLI
-      href: howto-assign-access-cli.md
-    - name: PowerShell
-      href: howto-assign-access-powershell.md
-  - name: Hantera användartilldelade hanterade identiteter
-    items:
-    - name: Portalen
-      href: how-to-manage-ua-identity-portal.md
-    - name: CLI
-      href: how-to-manage-ua-identity-cli.md
-    - name: PowerShell
-      href: how-to-manage-ua-identity-powershell.md
-    - name: Azure Resource Manager-mall
-      href: how-to-manage-ua-identity-arm.md
-    - name: REST
-      href: how-to-manage-ua-identity-rest.md
-  - name: Visa hanterad identitet och tjänsthuvudnamn
-    items:
-    - name: Portalen
-      href: how-to-view-managed-identity-service-principal-portal.md
-    - name: CLI
-      href: how-to-view-managed-identity-service-principal-cli.md
-    - name: PowerShell
-      href: how-to-view-managed-identity-service-principal-powershell.md
+    - name: Konfigurera hanterade identiteter på virtuella datorer
+      items:
+        - name: Portalen
+          href: qs-configure-portal-windows-vm.md
+        - name: CLI
+          href: qs-configure-cli-windows-vm.md
+        - name: PowerShell
+          href: qs-configure-powershell-windows-vm.md
+        - name: Azure Resource Manager-mall
+          href: qs-configure-template-windows-vm.md
+        - name: REST
+          href: qs-configure-rest-vm.md
+        - name: 'Azure-SDK:er'
+          href: qs-configure-sdk-windows-vm.md
+    - name: Konfigurera hanterade identiteter på VM-skalningsuppsättningar
+      items:
+        - name: Portalen
+          href: qs-configure-portal-windows-vmss.md
+        - name: CLI
+          href: qs-configure-cli-windows-vmss.md
+        - name: PowerShell
+          href: qs-configure-powershell-windows-vmss.md
+        - name: Azure Resource Manager-mall
+          href: qs-configure-template-windows-vmss.md
+        - name: REST
+          href: qs-configure-rest-vmss.md
+    - name: Använd hanterade identiteter på virtuella datorer
+      items:
+        - name: Hämta en åtkomsttoken
+          href: how-to-use-vm-token.md
+        - name: Logga in på Powershell och CLI med hanterad identitet
+          href: how-to-use-vm-sign-in.md
+        - name: 'Använda med Azure-SDK:er'
+          href: how-to-use-vm-sdk.md
+        - name: Sluta använda VM-tillägg och börja använda Azure IMDS
+          href: howto-migrate-vm-extension.md
+    - name: Tilldela en hanterad identitet åtkomst till en annan Azure-resurs
+      items:
+        - name: Portalen
+          href: howto-assign-access-portal.md
+        - name: CLI
+          href: howto-assign-access-cli.md
+        - name: PowerShell
+          href: howto-assign-access-powershell.md
+    - name: Hantera användartilldelade hanterade identiteter
+      items:
+        - name: Portalen
+          href: how-to-manage-ua-identity-portal.md
+        - name: CLI
+          href: how-to-manage-ua-identity-cli.md
+        - name: PowerShell
+          href: how-to-manage-ua-identity-powershell.md
+        - name: Azure Resource Manager-mall
+          href: how-to-manage-ua-identity-arm.md
+        - name: REST
+          href: how-to-manage-ua-identity-rest.md
+    - name: Visa hanterad identitet och tjänsthuvudnamn
+      items:
+        - name: Portalen
+          href: how-to-view-managed-identity-service-principal-portal.md
+        - name: CLI
+          href: how-to-view-managed-identity-service-principal-cli.md
+        - name: PowerShell
+          href: how-to-view-managed-identity-service-principal-powershell.md
 - name: Referens
   items:
-  - name: CLI
-    href: /cli/azure/identity
-  - name: PowerShell
-    href: /powershell/module/az.managedserviceidentity#managed_service_identity
-  - name: .NET
-    href: /dotnet/api/microsoft.azure.management.resourcemanager.fluent.authentication#azure-dotnet
-  - name: Java
-    href: https://github.com/Azure/azure-libraries-for-java#ready-to-run-code-samples-for-virtual-machines
-  - name: Python
-    href: /python/api/azure.mgmt.msi
-  - name: Ruby
-    href: https://rubygems.org/gems/azure_mgmt_msi
-  - name: Node.js
-    href: /javascript/api/ms-rest-azure
-  - name: Go
-    href: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/msi/mgmt/2015-08-31-preview/msi
+    - name: CLI
+      href: /cli/azure/identity
+    - name: PowerShell
+      href: '/powershell/module/az.managedserviceidentity#managed_service_identity'
+    - name: .NET
+      href: '/dotnet/api/microsoft.azure.management.resourcemanager.fluent.authentication#azure-dotnet'
+    - name: Java
+      href: 'https://github.com/Azure/azure-libraries-for-java#ready-to-run-code-samples-for-virtual-machines'
+    - name: Python
+      href: /python/api/azure.mgmt.msi
+    - name: Ruby
+      href: 'https://rubygems.org/gems/azure_mgmt_msi'
+    - name: Node.js
+      href: /javascript/api/ms-rest-azure
+    - name: Go
+      href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/msi/mgmt/2015-08-31-preview/msi'
 - name: Resurser
   items:
-  - name: Vanliga frågor och kända problem
-    href: known-issues.md
-  - name: Azure-tjänster som stöder hanterade identiteter för Azure-resurser
-    href: services-support-managed-identities.md
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-msi
-  - name: Forum för AAD-utvecklare
-    href: https://feedback.azure.com/forums/169401-azure-active-directory/category/164757-developer-experiences
-ms.openlocfilehash: 29ba42df28aff29b9ff4be873e6549006cc66a88
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58336124"
+    - name: Vanliga frågor och kända problem
+      href: known-issues.md
+    - name: Azure-tjänster som stöder hanterade identiteter för Azure-resurser
+      href: services-support-managed-identities.md
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-msi'
+    - name: Forum för AAD-utvecklare
+      href: 'https://feedback.azure.com/forums/169401-azure-active-directory/category/164757-developer-experiences'
