--- a/articles/active-directory/privileged-identity-management/index.yml
+++ b/articles/active-directory/privileged-identity-management/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f87b76c1d6629fff93ec6eba45a66f837d9737c9
-ms.sourcegitcommit: c63fe69fd624752d04661f56d52ad9d8693e9d56
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/28/2019
-ms.locfileid: "58579673"
 documentType: LandingData
 title: Dokumentation om Privileged Identity Management
 metadata:
-  document_id: 
+  document_id: null
   title: Dokumentation om Azure AD Privileged Identity Management (PIM) | Microsoft Docs
-  description: Lär dig mer om Azure Active Directory (Azure AD) Privileged Identity Management (PIM) för att begränsa stående administratörsåtkomst till privilegierade roller, identifiera vem som har åtkomst och granska privilegierad åtkomst.
+  description: 'Lär dig mer om Azure Active Directory (Azure AD) Privileged Identity Management (PIM) för att begränsa stående administratörsåtkomst till privilegierade roller, identifiera vem som har åtkomst och granska privilegierad åtkomst.'
   services: active-directory
   author: rolyon
   manager: mtillman
@@ -21,54 +15,54 @@ metadata:
   ms.date: 09/04/2018
   ms.author: rolyon
 abstract:
-  description: Med Azure Active Directory (Azure AD) Privileged Identity Management (PIM) kan du begränsa stående administratörsåtkomst till privilegierade roller, identifiera vem som har åtkomst och granska privilegierad åtkomst.
+  description: 'Med Azure Active Directory (Azure AD) Privileged Identity Management (PIM) kan du begränsa stående administratörsåtkomst till privilegierade roller, identifiera vem som har åtkomst och granska privilegierad åtkomst.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 112
       src: media/index/video-thumb-pim.png
       width: 200
-    title: Skydda nycklarna till slottet (42:45)
-    href: https://www.youtube.com/embed/w7wTpZYJJeQ
+    title: 'Skydda nycklarna till slottet (42:45)'
+    href: 'https://www.youtube.com/embed/w7wTpZYJJeQ'
     width: 200
 sections:
-- title: Instruktionsguider för berättigade och aktiva rollanvändare
-  items:
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: media/index/Azure Active Directory_COLOR.svg
-      title: Azure AD-roller
-    - image:
-        src: media/index/Cubes.svg
-      title: Azure-resurser
-    rows:
-    - title: Aktivera mina roller
-      values:
-      - href: /azure/active-directory/privileged-identity-management/pim-how-to-activate-role
-      - href: /azure/active-directory/privileged-identity-management/pim-resource-roles-activate-your-roles
-- title: Instruktionsguider för administratörer
-  items:
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: media/index/Azure Active Directory_COLOR.svg
-      title: Azure AD-roller
-    - image:
-        src: media/index/Cubes.svg
-      title: Azure-resurser
-    rows:
-    - title: Tilldela roller
-      values:
-      - href: /azure/active-directory/privileged-identity-management/pim-how-to-add-role-to-user
-      - href: /azure/active-directory/privileged-identity-management/pim-resource-roles-assign-roles
-    - title: Godkänn förfrågningar
-      values:
-      - href: /azure/active-directory/privileged-identity-management/azure-ad-pim-approval-workflow
-      - href: /azure/active-directory/privileged-identity-management/pim-resource-roles-approval-workflow
-    - title: Konfigurera rollinställningar
-      values:
-      - href: /azure/active-directory/privileged-identity-management/pim-how-to-change-default-settings
-      - href: /azure/active-directory/privileged-identity-management/pim-resource-roles-configure-role-settings
+  - title: Instruktionsguider för berättigade och aktiva rollanvändare
+    items:
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: media/index/Azure Active Directory_COLOR.svg
+            title: Azure AD-roller
+          - image:
+              src: media/index/Cubes.svg
+            title: Azure-resurser
+        rows:
+          - title: Aktivera mina roller
+            values:
+              - href: /azure/active-directory/privileged-identity-management/pim-how-to-activate-role
+              - href: /azure/active-directory/privileged-identity-management/pim-resource-roles-activate-your-roles
+  - title: Instruktionsguider för administratörer
+    items:
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: media/index/Azure Active Directory_COLOR.svg
+            title: Azure AD-roller
+          - image:
+              src: media/index/Cubes.svg
+            title: Azure-resurser
+        rows:
+          - title: Tilldela roller
+            values:
+              - href: /azure/active-directory/privileged-identity-management/pim-how-to-add-role-to-user
+              - href: /azure/active-directory/privileged-identity-management/pim-resource-roles-assign-roles
+          - title: Godkänn förfrågningar
+            values:
+              - href: /azure/active-directory/privileged-identity-management/azure-ad-pim-approval-workflow
+              - href: /azure/active-directory/privileged-identity-management/pim-resource-roles-approval-workflow
+          - title: Konfigurera rollinställningar
+            values:
+              - href: /azure/active-directory/privileged-identity-management/pim-how-to-change-default-settings
+              - href: /azure/active-directory/privileged-identity-management/pim-resource-roles-configure-role-settings
