--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ffc629df727adf9ae22a475ceb7e65b12fa5a0cc
-ms.sourcegitcommit: fec0e51a3af74b428d5cc23b6d0835ed0ac1e4d8
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/12/2019
-ms.locfileid: "56109239"
 documentType: LandingData
 title: Dokumentation om Key Vault
 metadata:
-  title: Dokumentation om Azure Key Vault – Självstudier, API-referens | Microsoft Docs
-  meta.description: Learn how to use Key Vault to create and maintain keys that access and encrypt your cloud resources, apps, and solutions. Tutorials, API references, and more.
+  title: 'Dokumentation om Azure Key Vault – Självstudier, API-referens | Microsoft Docs'
+  meta.description: 'Learn how to use Key Vault to create and maintain keys that access and encrypt your cloud resources, apps, and solutions. Tutorials, API references, and more.'
   author: barclayn
   manager: barbkess
   layout: LandingPage
@@ -20,80 +14,80 @@ metadata:
   ms.date: 09/14/2018
   ms.author: barclayn
 abstract:
-  description: Lär dig hur du använder Key Vault för att skydda och hantera krypteringsnycklar och hemligheter som används av molnprogram och molntjänster. Självstudier, API-referenser och annan dokumentation visar hur du skapar och underhåller nycklar och hemligheter som ger åtkomst till och krypterar dina resurser och lösningar.
+  description: 'Lär dig hur du använder Key Vault för att skydda och hantera krypteringsnycklar och hemligheter som används av molnprogram och molntjänster. Självstudier, API-referenser och annan dokumentation visar hur du skapar och underhåller nycklar och hemligheter som ger åtkomst till och krypterar dina resurser och lösningar.'
 sections:
-- items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
+  - items:
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 3
+        items:
+          - href: /azure/key-vault/key-vault-whatis
+            html: <p>Läs om grundläggande begrepp relaterade till Azure Key Vault.</p>
+            image:
+              src: 'https://docs.microsoft.com/media/common/i_article.svg'
+            title: Begrepp
+  - title: Snabbstarter på 5 minuter
     items:
-    - href: /azure/key-vault/key-vault-whatis
-      html: <p>Läs om grundläggande begrepp relaterade till Azure Key Vault.</p>
-      image:
-        src: https://docs.microsoft.com/media/common/i_article.svg
-      title: Begrepp
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: ''
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: ''
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: media/index/cli.svg
+            text: Azure CLI
+            href: /azure/key-vault/quick-create-cli
+          - image:
+              src: media/index/logo_powershell.svg
+            text: PowerShell
+            href: /azure/key-vault/quick-create-powershell
+          - image:
+              src: media/index/portal.svg
+            text: Azure Portal
+            href: /azure/key-vault/quick-create-portal
+          - image:
+              src: media/index/logo_NET.svg
+            text: .NET
+            href: /azure/key-vault/quick-create-net
+          - image:
+              src: media/index/logo_nodejs.svg
+            text: Node.js
+            href: /azure/key-vault/quick-create-node
+  - title: Steg för steg-självstudier
     items:
-    - image:
-        src: media/index/cli.svg
-      text: Azure CLI
-      href: /azure/key-vault/quick-create-cli
-    - image:
-        src: media/index/logo_powershell.svg
-      text: PowerShell
-      href: /azure/key-vault/quick-create-powershell
-    - image:
-        src: media/index/portal.svg
-      text: Azure Portal
-      href: /azure/key-vault/quick-create-portal
-    - image:
-        src: media/index/logo_NET.svg
-      text: .NET
-      href: /azure/key-vault/quick-create-net
-    - image:
-        src: media/index/logo_nodejs.svg
-      text: Node.js
-      href: /azure/key-vault/quick-create-node
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du använder Key Vault i olika scenarier
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Lär dig hur du använder Key Vault i olika scenarier
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/key-vault/tutorial-net-create-vault-azure-web-app">Komma igång med Key Vault från en webbapp</a>
+          - html: <a href="/azure/key-vault/tutorial-net-linux-virtual-machine">Så här använder du Azure Key Vault med en virtuell Azure Linux-dator</a></li>
+          - html: <a href="/azure/key-vault/tutorial-net-windows-virtual-machine">Så här använder du Azure Key Vault med en virtuell Azure Windows-dator</a>
+          - html: <a href="/azure/key-vault/tutorial-python-linux-virtual-machine">Så här använder du Azure Key Vault med en virtuell Azure Linux-dator</a>
+          - html: <a href="/azure/key-vault/tutorial-python-windows-virtual-machine">Så här använder du Azure Key Vault med en virtuell Azure Windows-dator</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - html: <a href="/azure/key-vault/tutorial-net-create-vault-azure-web-app">Komma igång med Key Vault från en webbapp</a>
-    - html: <a href="/azure/key-vault/tutorial-net-linux-virtual-machine">Så här använder du Azure Key Vault med en virtuell Azure Linux-dator</a></li>
-    - html: <a href="/azure/key-vault/tutorial-net-windows-virtual-machine">Så här använder du Azure Key Vault med en virtuell Azure Windows-dator</a>
-    - html: <a href="/azure/key-vault/tutorial-python-linux-virtual-machine">Så här använder du Azure Key Vault med en virtuell Azure Linux-dator</a>
-    - html: <a href="/azure/key-vault/tutorial-python-windows-virtual-machine">Så här använder du Azure Key Vault med en virtuell Azure Windows-dator</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Hantera hemligheter i dina serverappar med Azure Key Vault
+            href: /learn/modules/manage-secrets-with-azure-key-vault/
+            image:
+              src: /learn/achievements/manage-secrets-with-azure-key-vault.svg
+              href: /learn/modules/manage-secrets-with-azure-key-vault/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-key-vault">Mer interaktiv inlärning...</a>
+  - title: Referens
     items:
-    - title: Hantera hemligheter i dina serverappar med Azure Key Vault
-      href: /learn/modules/manage-secrets-with-azure-key-vault/
-      image:
-        src: /learn/achievements/manage-secrets-with-azure-key-vault.svg
-        href: /learn/modules/manage-secrets-with-azure-key-vault/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-key-vault">Mer interaktiv inlärning...</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/az.keyvault/?view=azps-1.2.0#key_vault">PowerShell</a></p><p><a href="/cli/azure/keyvault">Azure CLI 2</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/overview/azure/key-vault">NET</a></p><p><a href="/java/api/overview/azure/keyvault">Java</a></p><p><a href="/python/api/overview/azure/key-vault">Python</a></p><p><a href="/javascript/api/overview/azure/key-vault">Node.js</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/keyvault">REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: '<p><a href="/powershell/module/az.keyvault/?view=azps-1.2.0#key_vault">PowerShell</a></p><p><a href="/cli/azure/keyvault">Azure CLI 2</a></p>'
+          - title: Språk
+            html: <p><a href="/dotnet/api/overview/azure/key-vault">NET</a></p><p><a href="/java/api/overview/azure/keyvault">Java</a></p><p><a href="/python/api/overview/azure/key-vault">Python</a></p><p><a href="/javascript/api/overview/azure/key-vault">Node.js</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/keyvault">REST-API</a></p>
